--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -1,33 +1,149 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>GAN Predictor</title>
+    <style>
+        .btn-grid {
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            grid-gap: 10px;
+            margin: 0;
+            padding: 0;
+            list-style: none;
+        }
+
+        .btn-grid li {
+            margin: 0;
+            padding: 0;
+        }
+
+        .btn-grid button {
+            display: block;
+            width: 100%;
+            margin: 0;
+            padding: 0;
+        }
+    </style>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <script>
+        function submitForm() {
+            var form = document.getElementById("gan-form");
+            form.submit();
+        }
+    </script>
 </head>
+
 <body>
+    <!-- use bootstrap to make a grid of 3 by 6 buttons and a submit button below -->
     <form method="POST" enctype="multipart/form-data">
         {{ form.hidden_tag() }}
-        <input type="checkbox" name="input[]" value="1">Input 1<br>
-        <input type="checkbox" name="input[]" value="2">Input 2<br>
-        <input type="checkbox" name="input[]" value="3">Input 3<br>
-        <input type="checkbox" name="input[]" value="4">Input 4<br>
-        <input type="checkbox" name="input[]" value="5">Input 5<br>
-        <input type="checkbox" name="input[]" value="6">Input 6<br>
-        <input type="checkbox" name="input[]" value="7">Input 7<br>
-        <input type="checkbox" name="input[]" value="8">Input 8<br>
-        <input type="checkbox" name="input[]" value="9">Input 9<br>
-        <input type="checkbox" name="input[]" value="10">Input 10<br>
-        <input type="checkbox" name="input[]" value="11">Input 11<br>
-        <input type="checkbox" name="input[]" value="12">Input 12<br>
-        <input type="checkbox" name="input[]" value="13">Input 13<br>
-        <input type="checkbox" name="input[]" value="14">Input 14<br>
-        <input type="checkbox" name="input[]" value="15">Input 15<br>
-        <input type="checkbox" name="input[]" value="16">Input 16<br>
-        <input type="checkbox" name="input[]" value="17">Input 17<br>
-        <input type="checkbox" name="input[]" value="18">Input 18<br>
-        <input type="submit" value="Predict">
+        <div class="container">
+            <div class="row">
+
+
+                <div class="col-2">
+                    <label class="btn btn-primary">
+                        <input type="checkbox" name="input[]" value="1" autocomplete="off"> 1
+                    </label>
+                </div>
+                <div class="col-2">
+                    <label class="btn btn-primary">
+                        <input type="checkbox" name="input[]" value="2" autocomplete="off"> 2
+                    </label>
+                </div>
+                <div class="col-2">
+                    <label class="btn btn-primary">
+                        <input type="checkbox" name="input[]" value="3" autocomplete="off"> 3
+                    </label>
+                </div>
+
+                <div class="col-2">
+                    <label class="btn btn-primary">
+                        <input type="checkbox" name="input[]" value="4" autocomplete="off"> 4
+                    </label>
+                </div>
+                <div class="col-2">
+                    <label class="btn btn-primary">
+                        <input type="checkbox" name="input[]" value="5" autocomplete="off"> 5
+                    </label>
+                </div>
+                <div class="col-2">
+                    <label class="btn btn-primary">
+                        <input type="checkbox" name="input[]" value="6" autocomplete="off"> 6
+                    </label>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-2">
+                    <label class="btn btn-primary">
+                        <input type="checkbox" name="input[]" value="7" autocomplete="off"> 7
+                    </label>
+                </div>
+                <div class="col-2">
+                    <label class="btn btn-primary">
+                        <input type="checkbox" name="input[]" value="8" autocomplete="off"> 8
+                    </label>
+                </div>
+                <div class="col-2">
+                    <label class="btn btn-primary">
+                        <input type="checkbox" name="input[]" value="9" autocomplete="off"> 9
+                    </label>
+                </div>
+                <div class="col-2">
+                    <label class="btn btn-primary">
+                        <input type="checkbox" name="input[]" value="10" autocomplete="off"> 10
+                    </label>
+                </div>
+                <div class="col-2">
+                    <label class="btn btn-primary">
+                        <input type="checkbox" name="input[]" value="11" autocomplete="off"> 11
+                    </label>
+                </div>
+                <div class="col-2">
+                    <label class="btn btn-primary">
+                        <input type="checkbox" name="input[]" value="12" autocomplete="off"> 12
+                    </label>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-2">
+                    <label class="btn btn-primary">
+                        <input type="checkbox" name="input[]" value="13" autocomplete="off"> 13
+                    </label>
+                </div>
+                <div class="col-2">
+                    <label class="btn btn-primary">
+                        <input type="checkbox" name="input[]" value="14" autocomplete="off"> 14
+                    </label>
+                </div>
+                <div class="col-2">
+                    <label class="btn btn-primary">
+                        <input type="checkbox" name="input[]" value="15" autocomplete="off"> 15
+                    </label>
+                </div>
+                <div class="col-2">
+                    <label class="btn btn-primary">
+                        <input type="checkbox" name="input[]" value="16" autocomplete="off"> 16
+                    </label>
+                </div>
+                <div class="col-2">
+                    <label class="btn btn-primary">
+                        <input type="checkbox" name="input[]" value="17" autocomplete="off"> 17
+                    </label>
+                </div>
+                <div class="col-2">
+                    <label class="btn btn-primary">
+                        <input type="checkbox" name="input[]" value="18" autocomplete="off"> 18
+                    </label>
+                </div>
+            </div>
+            <input type="submit" value="Predict">
     </form>
     {% if filename %}
     <img src="{{ url_for('uploaded_file', filename=filename) }}" alt="Generated Image">
     {% endif %}
 </body>
+
 </html>
